--- a/account/templates/agreement.html
+++ b/account/templates/agreement.html
@@ -564,7 +564,7 @@
 </div>
 
 <footer class="mobile">
-    {% include 'playFooter.html' %}
+    {% include 'stickyFooter.html' %}
 </footer>
 <script type="text/javascript">
 
