--- a/account/templates/menu.html
+++ b/account/templates/menu.html
@@ -387,8 +387,8 @@
     <hr style="margin: 5px 0px;">
     {% endif %}
     </div>
-<footer class="mobile" style="margin-top: 60px;">
-    {% include 'playFooter.html' %}
+<footer class="mobile">
+    {% include 'stickyFooter.html' %}
 </footer>
 </body>
 </html>
