--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1024,7 +1024,7 @@ alert("{{res_data.error}}");
 </div>
 
 <footer class="mobile">
-    {% include 'playFooter.html' %}
+    {% include 'stickyFooter.html' %}
 </footer>
 <script>
     function sendSMS(){
