--- a/notification/templates/notification.html
+++ b/notification/templates/notification.html
@@ -363,7 +363,7 @@
     <!-- 페이지네이션 끝 -->
     </div>
 <footer class="mobile">
-    {% include 'playFooter.html' %}
+    {% include 'stickyFooter.html' %}
     </footer>
 </body>
 </html>
