--- a/account/templates/informationPolicy.html
+++ b/account/templates/informationPolicy.html
@@ -1,5 +1,32 @@
 {% extends 'base.html' %}
 {% block contents %}
+{% load static %}
+<style>
+    .pc{
+    display: block;
+    }
+
+    .mobile{
+        display: none;
+    }
+
+    @media only screen and (max-device-width : 720px) {
+        .pc{
+        display: none;
+        }
+        .mobile{
+        display: block;
+        }
+    }
+</style>
+
+<div class="mobile">
+    {% include 'navBar.html' %}
+  </div>
+  
+<span class="pc">
+{% include 'pcNavBar.html' %}
+</span>
 <div style="display: flex; flex-direction: row; justify-content: center;">
     <div class="policy">
         <h4><b>개인정보처리방침</b></h4>
@@ -203,5 +230,7 @@
         
     </div>
 </div>
-
+<footer class="mobile">
+    {% include 'stickyFooter.html' %}
+</footer>
 {% endblock %}
