--- a/account/templates/personalMyPage.html
+++ b/account/templates/personalMyPage.html
@@ -1,6 +1,33 @@
 {% extends 'base.html' %}
 
 {% block contents %}
+{% load static %}
+<style>
+    .pc{
+    display: block;
+    }
+
+    .mobile{
+        display: none;
+    }
+
+    @media only screen and (max-device-width : 720px) {
+        .pc{
+        display: none;
+        }
+        .mobile{
+        display: block;
+        }
+    }
+</style>
+
+<div class="mobile">
+    {% include 'navBar.html' %}
+  </div>
+  
+<span class="pc">
+{% include 'pcNavBar.html' %}
+</span>
 <div class="myPage">
 <div class="container p-4">
 <div class="row">
@@ -70,4 +97,7 @@
 </div>
 </div>
 </div>
+<footer class="mobile">
+    {% include 'stickyFooter.html' %}
+</footer>
 {% endblock %}
