--- a/FNSProject/templates/footer.html
+++ b/FNSProject/templates/footer.html
@@ -70,6 +70,7 @@
       }
       .sns{
         font-size: 0.7rem;
+        width: 100%;
       }
       .footerText p{
         font-size: 0.7rem;
@@ -97,19 +98,19 @@
     <div class="sns">
       <div style="display: inline-block; margin-right: 1.5rem;">
         <a href="https://www.facebook.com/koreanfootballlover/" style="text-decoration: none; color:white;">
-          <i class="fab fa-facebook-square fa-lg" style="margin-right: 5px;"></i>
+          <img src="{% static 'icon/facebook.png' %}" width="15px" style="padding-bottom: 3px;">
           <span>페이스북</span>
         </a> 
       </div> 
       <div style="display: inline-block; margin-right: 1.5rem;">
         <a href="https://www.instagram.com/fblover_official/" style="text-decoration: none; color:white;">
-          <i class="fab fa-instagram fa-lg" style="margin-right: 5px;"></i>
+          <img src="{% static 'icon/instagram.png' %}" width="15px" style="padding-bottom: 3px;">
           <span>인스타그램</span>
         </a>
       </div>
       <div style="display: inline-block; margin-right: 1.5rem;">
         <a href="https://www.youtube.com/c/footballloverofficial" style="text-decoration: none; color:white;">
-          <i class="fab fa-youtube fa-lg"></i>
+          <img src="{% static 'icon/youtube.png' %}" width="15px" style="padding-bottom: 3px;">
           <span>유튜브</span>
         </a>
       </div>
