--- a/FNSProject/templates/base.html
+++ b/FNSProject/templates/base.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>Football Lover</title>
+    <title>풋살 올인원 서비스 풋볼러버</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'account/logofile/onlyLogo.png' %}">
+
     <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -67,7 +69,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'match/css/comment.css' %}" />
     <!-- base.css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'account/css/base.css' %}" />
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'account/css/base.css' %}" /> -->
 
     <!-- js파일 -->
     <script src="{% static 'js/home.js' %}" type="text/javascript"></script>
@@ -281,23 +283,33 @@
             color: white;
         }
 
-
-
-
-        /*Policy */
-        .policy {
-            width: 720px;
-            margin: 50px 0;
-            padding: 10px;
+        /* calendar */
+        #calendar td {
+            width: 50px;
+            height: 50px;
+            text-align: center;
+            font-size: 16px;
+            font-family: 'Noto Sans KR';
+            border-radius:8px;
+        }
+        
+        #calendar{
+            background-color:white;
+            border-radius:8px;
         }
 
-        @media screen and (max-width: 500px) {
-            .policy {
-                width: 100%;
-                margin: 50px 0;
-                padding: 10px;
-            }
+        .a{
+        text-decoration: none;
+        font-family: 'Nanum Gothic';
         }
+
+
+        .schedule{
+            border-top:3%;
+            background-image: linear-gradient(72deg, #ED213A, #93291E);
+            padding:40px;
+        }
+        
     </style>
 
 </head>
@@ -396,6 +408,7 @@
             interval: 20
         })
     </script>
+
     <script language="javascript" type="text/javascript">
         buildCalendar();
     </script>
@@ -408,18 +421,18 @@
         }
 
         // Close the dropdown menu if the user clicks outside of it
-        window.onclick = function (event) {
-            if (!event.target.matches('.dropbtn')) {
-                var dropdowns = document.getElementsByClassName("alarmDropdown-content");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show')) {
-                        openDropdown.classList.remove('show');
-                    }
-                }
-            }
-        }
+        // window.onclick = function (event) {
+        //     if (!event.target.matches('.dropbtn')) {
+        //         var dropdowns = document.getElementsByClassName("alarmDropdown-content");
+        //         var i;
+        //         for (i = 0; i < dropdowns.length; i++) {
+        //             var openDropdown = dropdowns[i];
+        //             if (openDropdown.classList.contains('show')) {
+        //                 openDropdown.classList.remove('show');
+        //             }
+        //         }
+        //     }
+        // }
     </script>
 </body>
 
