--- a/FNSProject/templates/playFooter.html
+++ b/FNSProject/templates/playFooter.html
@@ -3,6 +3,11 @@
   .stickyFooter{
     background-color: #F3F3F3;
     height: 60px;
+    position:fixed;
+    width: 100%;
+    bottom:0;
+    z-index:1;
+    
     
   }
 
@@ -15,17 +20,17 @@
     flex-direction: row;
   }
 
-    .text{
-        display:absolute;
-        bottom:30px;
-        z-index: 100;
-        font-size: 8px;
-        font-family: 'Nanum Gothic';
-        padding:0px;
-        margin:0px;
-        color:#28AAE3;
-        text-align: center;
-    }
+  .text{
+      display:absolute;
+      bottom:30px;
+      z-index: 100;
+      font-size: 8px;
+      font-family: 'Nanum Gothic';
+      padding:0px;
+      margin:0px;
+      color:#28AAE3;
+      text-align: center;
+  }
   .fa{
       transform: none !important;
   }
