--- a/FNSProject/templates/stickyFooter.html
+++ b/FNSProject/templates/stickyFooter.html
@@ -29,7 +29,7 @@
     </div>
     <div style="width: 20%;" class="d-flex justify-content-center">
       <a href="{% url 'home' %}">
-        <i class="fas fa-2x fa-list-ol" style="color:black;"></i>
+        <img src="{% static 'icon/ranking2.png' %}" width="35px" alt="">
       </a>
     </div>
     <div style="width: 20%;" class="d-flex justify-content-center">
