--- a/match/templates/personalMatching/personal.html
+++ b/match/templates/personalMatching/personal.html
@@ -108,18 +108,25 @@
     
     .pc{
         display: block;
-      }
+    }
     
-      .mobile{
+    .mobile{
         display: none;
-      }
+    }
+
+    .marginForNav{
+        margin-top: 80px;
+    }
     
-      @media only screen and (max-device-width : 720px) {
+      @media all and (max-device-width : 720px) {
         .pc{
           display: none;
         }
         .mobile{
           display: block;
+        }
+        .marginForNav{
+            margin-top: 60px;
         }
     }
     
@@ -142,7 +149,7 @@
 </span>
 
 <!--컨텐츠 영역-->
-<div class="sec match personal" style="max-width: 720px; margin: 0 auto;">
+<div class="sec match personal" style="max-width: 720px; margin: 60px auto;">
 
     <!-- 양쪽정렬된 탭 메뉴 -->
     <ul class="nav-justified">
@@ -231,7 +238,7 @@
     
     for (i=1; i<=7; i++) { 
         cell = row.insertCell();
-        var code = "<a type=button onclick = 'personalDay("+nowMonth+","+nowDate+");' style = text-decoration:none; color:black;>" + nowDate + "</a>"
+        var code = "<a onclick = 'personalDay("+nowMonth+","+nowDate+");' style = text-decoration:none; color:black;>" + nowDate + "</a>"
 
         cell.innerHTML = code;
         cell.className ="dateTxt";
