--- a/match/templates/play.html
+++ b/match/templates/play.html
@@ -35,7 +35,7 @@
 {% include 'pcNavBar.html' %}
 </span>
 <!--컨텐츠 영역-->
-<div style="max-width: 720px; width: 100%; margin:0 auto;">
+<div style="max-width: 720px; width: 100%; margin:0 auto; margin-top: 60px;">
 <div class="sec play" style="background-image: url({% static 'bg_play.png' %})">
     <ul>
         <li class="list">
